testsuite/tests/indexed-types/should_fail/T16110_Fail1.stderr

T16110_Fail1.hs:10:19: error: Not in scope: type variable ‘a’

T16110_Fail1.hs:10:21: error: Not in scope: type variable ‘b’

T16110_Fail1.hs:10:32: error: Not in scope: type variable ‘a’

T16110_Fail1.hs:10:34: error: Not in scope: type variable ‘b’

T16110_Fail1.hs:13:15: error:
    Conflicting definitions for ‘dup’
    Bound at: T16110_Fail1.hs:13:15-17
              T16110_Fail1.hs:13:19-21
              T16110_Fail1.hs:13:23-25

T16110_Fail1.hs:16:21: error: Not in scope: type variable ‘a’

T16110_Fail1.hs:19:21: error: Not in scope: type variable ‘k’
